# spaghetti

./: NOTES.md  manage.py  pyproject.toml
custom_app/: apps.py  urls.py  views.py
custom_app/templates/: hello.html
likes/: models.py
likes/migrations/: 0001_initial.py
spaghetti/: asgi.py  settings.py  urls.py  wsgi.py
store/: models.py
store/migrations/: 0001_initial.py  0002_rename_price_product_unit_price.py  0003_add_slug_to_project.py  0004_address_zip_code.py  0005_customer_store_custo_last_na_e6a359_idx_and_more.py
tags/: models.py
tags/migrations/: 0001_initial.py
